# OpenGL-Template

./: .gitignore  CMakeLists.txt  README.md
include/: ImGUI.hpp  Input.hpp  Window.hpp
include/core/: Input.hpp
src/: imgui.cpp  input.cpp  main.cpp  window.cpp
src/core/: input.cpp
